<resources>
    <string name="app_name">Local Market</string>

    <!-- switch -->
    <string name="switch_vendedor">¿Registrarse como vendedor?     </string>

    <!-- buttons -->
    <string name="login">Login</string>
    <string name="sing_up">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Nombre de usuario</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar cuenta</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="listo">Listo</string>
    <string name="cancel">Cancelar</string>
    <string name="volver">Volver</string>

    <!-- hints -->
    <string name="insert_email_hint">Correo electrónico</string>
    <string name="hint_pwd">Contraseña</string>
    <string name="indroduce_password_actual">Contraseña actual</string>
    <string name="introduce_new_password">Nueva contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname">Apellidos</string>
    <string name="hint_description">Describe tu producto</string>
    <string name="hint_stock">Determina la cantidad</string>

    <!-- messages -->
    <string name="message_empty_fields">Por favor, complete todos los campos.</string>
    <string name="vendedor">Vendedor\n</string>

    <!-- productos -->
    <string name="product_near">Productos cerca de mi</string>
    <string name="product_main">Mis productos a la venta</string>
    <string name="new_product">Nuevo producto</string>
    <string name="price">Precio</string>

    <!-- textview -->
    <string name="tv_unidad_medida">Peso/unidad</string>
    <string name="tv_kg_unidad">kg/unidad</string>

    <!-- Toasts -->
    <string name="toast_invalid_username">Este campo no puede tener carácteres especiales</string>
    <string name="toast_invalid_email">El formato es incorrecto, debe ser "xxx@xxx.xxx"</string>
    <string name="toast_invalid_special_characters">Este campo no puede tener carácteres especiales ni números</string>
    <string name="toast_invalid_password">Productos cerca de mi</string>
    <string name="toast_invalid_name">Productos cerca de mi</string>
    <string name="toast_field_empty">Introduzca el campo</string>
    <string name="toast_field_not_uppercase">El password debe contener minimo 1 mayuscula</string>
    <string name="toast_field_not_special_char">El password debe contener minimo 1 caracter especial</string>
    <string name="toast_field_min_8char">La contraseña debe tener mínimo 8 carácteres.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productors_near">Productores cerca de mi</string>
    <string name="add_tocart">Añadir al Carrito</string>
    <string name="mi_cesta">Mi cesta</string>
    <string name="confirmar_pedido">Enviar Pedido</string>
    <string name="iva_incluido">IVA incluido</string>
    <string name="total">TOTAL:</string>
    <string name="tv_distancia">Rango de busqueda:</string>
    <string name="actualizar_busqueda">Actualizar</string>
    <string name="search_button_productors">Buscar Productos</string>
    <string name="mis_pedidos">Mis pedidos:</string>
    <string name="pedido_realizado_por">Pedido realizado por:</string>
    <string name="productos_pedido">Productos del pedido:</string>
    <string name="aceptar">Aceptar Pedido</string>


</resources>